src/App.css
@import url("https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&display=swap");

body,
button,
input {
  font-family: "Alan Sans", Helvetica, sans-serif;
}

fieldset {
  border: none;
  box-sizing: border-box;
}

#canvas-container {
  width: 100%;
  height: 50vh;

  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
}

canvas {
  min-height: 0;
  min-width: 0;
  width: 100%;
  height: 100%;
  object-fit: contain;
  image-rendering: pixelated;
  background: conic-gradient(#ddd 25%, #bbb 0 50%, #ddd 0 75%, #bbb 0);
  background-size: 32px 32px;
  aspect-ratio: unset;
}

#carter-examples {
  width: 100%;
  height: 200px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  gap: 10px;
  margin-top: 20px;
}

#wrapper {
  display: grid;
  grid-template-columns: 2fr 1fr;
  gap: 0;
}

pre {
  letter-spacing: -0.05em;
  font-size: xx-small;
  white-space: pre-wrap;
  word-break: break-all;
  user-select: all;
}

#main-carter {
  display: block;
  width: 100%;
  height: 100%;
  min-height: 0;
  min-width: 0;
  grid-area: carter;
}

.feature-page {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;

  gap: 1vw;

  height: 100%;
  min-height: 0;

  grid-area: features;
}

.feature-page > button {
  min-height: 0;
  height: 100%;
}

#features-book {
  grid-area: book;
  width: 100%;
  height: 100%;
  min-height: 0;
  min-width: 0;
  padding: 1vw;
  box-sizing: border-box;

  display: grid;
  grid-template-areas:
    "tabs"
    "features"
    "controls";

  grid-template-rows: auto 1fr auto;
}

#page-tabs {
  grid-area: tabs;
}

#main-wrapper {
  display: grid;
  align-items: center;
  justify-content: center;
}

#carter-builder {
  display: grid;
  grid-template-areas:
    "header header"
    "nav nav"
    "carter book";

  width: 100vw;
  max-width: 900px;
  height: 100dvh;

  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto auto 1fr;

  gap: 2vw;
}

button {
  padding: 0.5vw;
  border-radius: 0.5vw;
  border-style: none;
  box-sizing: border-box;
}

input,
button {
  font-size: medium;
}

button:hover > canvas {
  background: conic-gradient(#bbb 25%, #999 0 50%, #bbb 0 75%, #999 0);
  background-size: 32px 32px;
}

body {
  margin: 0;
}

nav {
  display: flex;
  flex-flow: row nowrap;
  grid-area: nav;
}

nav > button {
  flex: 1 1 0px;
  padding: 1em 0;

  display: flex;
  flex-flow: column;
  align-items: center;

  font-size: small;

  background-color: gray;
}

nav > button:disabled {
  background-color: dimgray;
  color: unset;
}

h1 {
  grid-area: header;
  margin-bottom: 0;
  font-size: large;
}

legend {
  font-size: large;
  font-weight: normal;
}

#offset-buttons {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-area: controls;
}

#offset-buttons > input {
  font-size: larger;
}

#offset-buttons > input:nth-child(2),
#offset-buttons > input:nth-child(4) {
  width: 75%;
  justify-self: right;
}

#offset-buttons > input:nth-child(3),
#offset-buttons > input:nth-child(5) {
  width: 75%;
  justify-self: left;
}

nav > button:before {
  content: "";
  display: block;
  width: 100%;
  aspect-ratio: 1;
  background: url(../public/button-icons/bases.svg);
  background-size: contain;
  background-repeat: no-repeat;
}

#bases-button:before {
  background-image: url(../public/button-icons/bases.svg);
}

#hair-button:before {
  background-image: url(../public/button-icons/hair.svg);
}

#hat-button:before {
  background-image: url(../public/button-icons/hat.svg);
}

#blush-button:before {
  background-image: url(../public/button-icons/blush.svg);
}

#mouth-button:before {
  background-image: url(../public/button-icons/mouth2.svg);
}

#eyes-button:before {
  background-image: url(../public/button-icons/eyes.svg);
}

#eyebrows-button:before {
  background-image: url(../public/button-icons/eyebrows.svg);
}

#hands-button:before {
  background-image: url(../public/button-icons/hand.svg);
}

#glasses-button:before {
  background-image: url(../public/button-icons/glasses.svg);
}

#fx-button:before {
  background-image: url(../public/button-icons/fx.svg);
}

#mustache-button:before {
  background-image: url(../public/button-icons/mustache.svg);
}

@media (max-width: 768px) {
  nav > button:before {
    display: none;
  }

  nav > button {
    flex: initial;
    flex-grow: 1;
  }

  #carter-builder {
    grid-template-areas:
      "header"
      "nav"
      "carter"
      "book";

    grid-template-columns: 1fr;
    grid-template-rows: auto auto 1fr 1fr;
  }

  #main-carter {
    width: 100%;
    height: 100%;
  }
}

